src/scss/style.scss
/* ... */
body:not(.type-post) main .left-offset>*:not(.fbx-wrap) {
    @extend .max-content;
}

.post-list .fbx-keynav-active {
    background: lighten($hlcolor, 27%) !important;
}

.post-list {
    position: relative;
    padding: 0;
    margin: 0;
    list-style: none;
    width: 100%;
    height: 0;
    overflow: auto;
    max-height: calc(100vh - 4rem);
    z-index: 8;

    @media($desktop) {
        position: absolute;
    }

    &::before {
        content: "";
        position: fixed;
        display: block;
        transform-origin: top;
        transform: scaleY(0);
        top: 0;
        right: 0;
        left: 0;
        height: 100vh;
        transition: background 0.2s;
        background: transparent;
        backface-visibility: hidden;
        z-index: -1;
    }

    li {
        background: white;

        a {
            margin-top: -1px;
            border-top: 1px solid rgba($bordercolor, 0.5);
        }

        @media($desktop) {
            padding-left: 6rem;
        }
    }

    a {
        display: block;
        padding: 1rem 1rem 1rem 3.75rem;
        color: $base;
        text-decoration: none;

        @media($desktop) {
            padding-left: 0;
        }

        &:hover {
            p.title {
                text-decoration: underline;
            }
        }
    }

    p {
        margin: 0;
        font-size: 0.97rem;
        padding-right: 2rem;

        &.description {
            display: none;

            @media($desktop) {
                display: block;
            }
        }
    }

    p.title {
        @extend h3;
        margin: 0 0 -0.25rem;
        color: $paleblue;
        line-height: 1.25;

        @media($desktop) {
            margin: 0;
        }
    }

    .year {
        position: absolute;
        left: 2rem;
        opacity: 0.5;

        @media($max-tablet) {
            display: none;
        }
    }
}

.search-counter {
    color: rgba(white, 0.4);
    font-size: 0.9rem;
    font-style: italic;
    line-height: 4rem;
    position: absolute;
    right: 2rem;
    top: 0;
    margin-top: -0.6rem;
    z-index: 12;

    body.page-home & {
        color: rgba($base, 0.4);
    }

    @media($desktop) {
        margin-top: 0;
    }
}

fbxhl.on {
    background: rgba($hlcolor, 0.4);
    // border-bottom: 2px solid $hlcolor;
}

blockquote {
    border-left: 0.3rem solid $bordercolor;
    padding-left: 1.5rem;
    margin: 1.25rem 0 2rem;
}

@media ($tablet) {
    ::-webkit-scrollbar {
        width: 21px;
        height: 21px;

        &-track {
            background: transparent;
        }

        &-thumb {
            background: $paleblue;
            border: 13px solid transparent;
            background-clip: content-box !important;

            &:hover {
                background: lighten($paleblue, 10%);
            }
        }
    }
}

.copy-to-clipboard {
    $size: 1.84rem;
    position: absolute;
    top: 1.066rem;
    right: 1rem;
    background: transparent;
    border: none;
    width: $size;
    height: $size;
    color: $base;
    font-size: 0.96rem;
    filter: saturate(0) sepia(75%) hue-rotate(170deg) brightness(84%);

    &::before {
        content: "\1F4CB";
        position: absolute;
        top: 1px;
        left: 50%;
        transform: translateX(-50%);
        line-height: $size;
        backface-visibility: hidden;
    }

    &:not(:hover) {
        opacity: 0.5;
        filter: saturate(0);
    }

    &.copy-success {
        opacity: 1;
        transform: scale(1.125);
        transform-origin: center;
        color: $paleblue;
        animation: fade-in-out 1s ease-in-out;
        filter: none;

        &::before {
            content: "\2713";
            margin: 1px 0 0 -1px;
            font-weight: bold;
        }
    }

    span {
        display: none;
    }
}

@keyframes fade-in-out {
    0% {
        opacity: 0;
    }

    30% {
        opacity: 1;
    }

    70% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

blockquote {
    border-left: 0.3rem solid $bordercolor;
    padding-left: 1.5rem;
    margin: 1.25rem 0 2rem;

    cite {
        @extend .text-sm;
        @extend .text-faded;

        &::before {
            content: "-- ";
        }
    }
}

/* highlight js */

blockquote {
    pre {
        margin-left: 0;
    }
}

.hljs-ln-numbers {
    user-select: none;
    position: relative;
    left: -2rem;
    width: 1rem;
    text-align: right;
    color: rgba($base, 0.33);
    vertical-align: top;
    background: white;
    padding-left: 2rem !important;
    padding-right: 1rem !important;
}

pre {
    @media($max-tablet) {
        margin-left: -1.5rem;
        margin-right: -1.5rem;
    }

    position: relative;
    margin-bottom: 1.5rem;
    font-size: 94%;

    code {
        display: block;
        padding: 1.25rem 1.5rem !important;
        background: $codeBgColor !important;
        margin-right: 0;
        margin-left: 0;
        line-height: 1.5;

        &.hljs {
            table {
                margin-left: -4rem;
            }

            &::before {
                position: absolute;
                top: 1.25rem;
                right:  2.75rem;
                display: inline-block;
                opacity: 0.25;
                user-select: none;
                font-size: 1rem;

                @media($max-tablet) {
                    display: none;
                }
            }

            &.language-javascript::before {
                content: "JS";
            }

            &.language-html::before {
                content: "HTML";
            }

            &.language-css::before {
                content: "CSS";
            }

            &.language-php::before {
                content: "PHP";
            }

            &.language-ini::before {
                content: "INI";
            }

            &.language-sql::before {
                content: "SQL";
            }
        }
    }
}
/* ... */

